--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "match-sorter": "^6.3.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
+        "react-countdown": "^2.3.5",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.20.0",
         "react-swipeable-views": "^0.14.0",
