--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.14.18",
         "@mui/material": "^5.14.18",
+        "axios": "^1.6.2",
         "firebase": "^10.6.0",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
@@ -21,6 +22,7 @@
         "react": "^18.2.0",
         "react-countdown": "^2.3.5",
         "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.1",
         "react-router-dom": "^6.20.0",
         "react-swipeable-views": "^0.14.0",
         "sort-by": "^1.2.0"
