--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.14.18",
         "@mui/material": "^5.14.18",
+        "@stripe/react-stripe-js": "^2.4.0",
+        "@stripe/stripe-js": "^2.2.0",
         "@tanstack/react-query": "^5.8.7",
         "axios": "^1.6.2",
         "firebase": "^10.6.0",
@@ -23,6 +25,7 @@
         "react": "^18.2.0",
         "react-countdown": "^2.3.5",
         "react-dom": "^18.2.0",
+        "react-google-charts": "^4.0.1",
         "react-hot-toast": "^2.4.1",
         "react-router-dom": "^6.20.0",
         "react-swipeable-views": "^0.14.0",
